--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/trajan
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.show-sql=true
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.defer-datasource-initialization=true
