--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.defer-datasource-initialization=true
+spring.security.user.name=atul
+spring.security.user.password=bhatt
